# ibitcoinq

./: .gitignore  CMakeLists.txt  CMakeSettings.json  setting.conf  setting.conf.in
src/: CMakeLists.txt  channel.cpp  channel.h  command.cpp  command.h  global.h  http_session.h  json.h  main.cpp  trades_manager.cpp  trades_manager.h  type.h  util.cpp  util.h  ws_session.h
src/crypto/: base64.cpp  base64.h  md5.h
src/indicator/: ma.h
src/okex/: channel.cpp  channel.h  client.cpp  client.h  command.cpp  command.h  private_channel.cpp  private_channel.h  public_channel.cpp  public_channel.h  rest_api.cpp  rest_api.h  restapi.cpp  restapi.h  settings.cpp  settings.h
src/socks/: error.hpp  handshake.hpp
src/socks/detail/: protocol.hpp
src/socks/impl/: error.ipp
src/utils/: concurrent_queue.h  format_table.cpp  format_table.h  http_session.cpp  http_session.h  logger.cpp  logger.h  timer_wheel.cpp  timer_wheel.h  utils.cpp  utils.h  ws_session.cpp  ws_session.h
src/utils/crypto/: base64.h  hmac_md5.cpp  hmac_md5.h  md5.cpp  md5.h
src/utils/socks/: query.hpp  uri.hpp
src/utils/socks/detail/: char_type.hpp  host.hpp
src/utils/socks/impl/: handshake.hpp  uri.ipp
